aggiunti contenuti nella nav-bar

--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title>Struttura Discord</title>
 </head>
 
 <body>
     <header>
-        <div class="container-header">
-            <span class="border">Logo</span>
+        <nav class="nav-bar">
+            <img src="./img/logo.svg" alt="Discord Logo">
             <ul class="border">
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
-                <li><a href="">Link</a></li>
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Perchè Discord</a></li>
+                <li><a href="">Nitro</a></li>
+                <li><a href="">Sicurezza</a></li>
+                <li><a href="">Assistenza</a></li>
             </ul>
-            <span class="login border">Login</span>
-        </div>
+            <button class="login border">Accedi</button>
+        </nav>
         <div class="container bg-blue">
             <section class="jumbo-block border"></section>
         </div>
