aggiunti contenuti nel jumbo e gestito lo stile

--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
             </ul>
             <button class="login border">Accedi</button>
         </nav>
-        <div class="container bg-blue">
-            <section class="jumbo-block border"></section>
+        <div class="container">
+            <section class="jumbo-block border">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
+                    semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più
+                    facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <button class="btn-size mac">&darr; Scarica per Mac</button>
+                <button class="btn-size open-browser">Apri Discord nel tuo browser</button>
+            </section>
         </div>
     </header>
     <main>
