aggiunto contenuto al primo div del container

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <header>
         <nav class="nav-bar">
             <img src="./img/logo.svg" alt="Discord Logo">
-            <ul class="border">
+            <ul>
                 <li><a href="">Scarica</a></li>
                 <li><a href="">Perchè Discord</a></li>
                 <li><a href="">Nitro</a></li>
                 <li><a href="">Sicurezza</a></li>
                 <li><a href="">Assistenza</a></li>
             </ul>
-            <button class="login border">Accedi</button>
+            <button class="login">Accedi</button>
         </nav>
         <div class="container">
-            <section class="jumbo-block border">
+            <section class="jumbo-block">
                 <h1>Il tuo posto per parlare</h1>
                 <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
                     semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più
@@ -37,29 +37,39 @@
         </div>
     </header>
     <main>
-        <div class="container bg-white">
-            <section class="big-block border"></section>
-            <section class="small-block border"></section>
+        <div class="container padd">
+            <section class="big-block">
+                <img src="./img/item1.svg" alt="Group Discord">
+            </section>
+            <section class="small-block">
+                <h2>
+                    Un luogo a invito con tutto lo spazio necessario per parlare
+                </h2>
+                <p>
+                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                    semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                </p>
+            </section>
         </div>
         <div class="container bg-grey">
-            <section class="small-block border"></section>
-            <section class="big-block border"></section>
+            <section class="small-block"></section>
+            <section class="big-block"></section>
         </div>
         <div class="container bg-white">
-            <section class="big-block border"></section>
-            <section class="small-block border"></section>
+            <section class="big-block"></section>
+            <section class="small-block"></section>
         </div>
         <div class="container bg-grey">
-            <section class="bigger-block border"></section>
+            <section class="bigger-block"></section>
         </div>
     </main>
     <footer>
         <div class="container bg-dark">
-            <section class="col-big border"></section>
-            <section class="col-small border"></section>
-            <section class="col-small border"></section>
-            <section class="col-small border"></section>
-            <section class="col-small border"></section>
+            <section class="col-big"></section>
+            <section class="col-small"></section>
+            <section class="col-small"></section>
+            <section class="col-small"></section>
+            <section class="col-small"></section>
         </div>
         <hr>
         <div class="footer-down">
