agggiunti contenuti nel secondo e terzo div

--- a/index.html
+++ b/index.html
@@ -51,13 +51,32 @@
                 </p>
             </section>
         </div>
-        <div class="container bg-grey">
-            <section class="small-block"></section>
-            <section class="big-block"></section>
+        <div class="container padd bg-grey">
+            <section class="small-block">
+                <h2>
+                    Dove trovarsi è facile
+                </h2>
+                <p>
+                    Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei
+                    lì e unirsi istantaneamente senza dover chiamare.
+                </p>
+            </section>
+            <section class="big-block">
+                <img src="./img/item2.svg" alt="Channel Discord">
+            </section>
         </div>
         <div class="container bg-white">
-            <section class="big-block"></section>
-            <section class="small-block"></section>
+            <section class="big-block">
+                <img src="./img/item3.svg" alt="Member List Discord">
+            </section>
+            <section class="small-block">
+                <h2>
+                    Da pochi a un fandom
+                </h2>
+                <p>
+                    Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                </p>
+            </section>
         </div>
         <div class="container bg-grey">
             <section class="bigger-block"></section>
