--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <img src="./img/item1.svg" alt="Group Discord">
             </section>
             <section class="small-block">
-                <h2>
+                <h2 class="h2-size">
                     Un luogo a invito con tutto lo spazio necessario per parlare
                 </h2>
-                <p>
+                <p class="generic-lh-p">
                     I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
                     semplicemente parlare della tua giornata senza intasare una chat di gruppo.
                 </p>
@@ -53,10 +53,10 @@
         </div>
         <div class="container padd bg-grey">
             <section class="small-block">
-                <h2>
+                <h2 class="h2-size">
                     Dove trovarsi è facile
                 </h2>
-                <p>
+                <p class="generic-lh-p">
                     Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei
                     lì e unirsi istantaneamente senza dover chiamare.
                 </p>
@@ -65,21 +65,39 @@
                 <img src="./img/item2.svg" alt="Channel Discord">
             </section>
         </div>
-        <div class="container bg-white">
+        <div class="container padd">
             <section class="big-block">
                 <img src="./img/item3.svg" alt="Member List Discord">
             </section>
             <section class="small-block">
-                <h2>
+                <h2 class="h2-size">
                     Da pochi a un fandom
                 </h2>
-                <p>
-                    Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                <p class="generic-lh-p">
+                    Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri
+                    personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
                 </p>
             </section>
         </div>
-        <div class="container bg-grey">
-            <section class="bigger-block"></section>
+        <div class="container padd bg-grey">
+            <section class="bigger-block">
+                <h2 class="h2-size">
+                    Tecnologia affidabile per tenersi in contatto
+                </h2>
+                <p class="generic-lh-p">
+                    Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao
+                    in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la
+                    condivisione schermo
+                </p>
+                <img src="./img/item4-big.svg" alt="Streaming Discord">
+                <h3>
+                    Pronto a iniziare la tua avventura?
+                </h3>
+                <br>
+                <button class="btn-size mac-2">
+                    &darr; Scarica per Mac
+                </button>
+            </section>
         </div>
     </main>
     <footer>
